Fixing align

--- a/public/Chat/estilos.css
+++ b/public/Chat/estilos.css
@@ -292,7 +292,9 @@ table.striped>tbody>tr>td{
     cursor: pointer;
 }
 
-
+.txtAlign{
+    text-align: left !important;
+}
 
 /* //
 
